syntax = "proto3";

package manager.api.role;

option go_package = ".;role";
option java_multiple_files = true;
option java_package = "manager.api.role";

import "validate/validate.proto";

message GetRoleRequest {
  optional uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional string keyword = 2[(validate.rules).string = {min_len: 1}];
}

message GetRoleReply {
  uint32 id = 1;
  uint32 parentId = 2;
  string name = 3;
  string keyword = 4;
  optional bool status = 5;
  optional string description = 6;
  uint32 createdAt = 7;
  uint32 updatedAt = 8;
}

message ListRoleRequest{}

message ListRoleReply {
  message Role {
    uint32 id = 1;
    uint32 parentId = 2;
    string name = 3;
    string keyword = 4;
    optional bool status = 5;
    optional string description = 6;
    repeated Role children = 7;
    uint32 createdAt = 8;
    uint32 updatedAt = 9;
  }

  repeated Role list = 1;
}

message CreateRoleRequest {
  uint32 parentId = 1[(validate.rules).uint32 = {gte: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1, max_len: 32}];
  string name = 3[(validate.rules).string = {min_len: 1, max_len: 128}];
  string description = 5[(validate.rules).string = {min_len: 1, max_len: 256}];
}

message CreateRoleReply {
  uint32 id = 1;
}

message UpdateRoleRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
  optional uint32 parentId = 2;
  optional string name = 3[(validate.rules).string = {min_len: 1, max_len: 128}];
  optional bool status = 4;
  optional string description = 5;
}

message UpdateRoleReply {
}

message DeleteRoleRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteRoleReply {
}



