syntax = "proto3";

package manager.api.role;

option go_package = "manager/api/role;role";
option java_multiple_files = true;
option java_package = "manager.api.role";

import "api/role/proto/role.proto";
import "google/api/annotations.proto";

service Role{
  // GetRole 获取角色信息
  rpc GetRole (GetRoleRequest) returns (GetRoleReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/role",
    };
  }

  // ListRole 获取角色信息列表
  rpc ListCurrentRole (ListRoleRequest) returns (ListRoleReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/current/roles",
    };
  }

  // ListRole 获取角色信息列表
  rpc ListRole (ListRoleRequest) returns (ListRoleReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/roles",
    };
  }

  // CreateRole 创建角色信息
  rpc CreateRole (CreateRoleRequest) returns (CreateRoleReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/role",
      body: "*"
    };
  }

  // UpdateRole 更新角色信息
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/role",
      body: "*"
    };
  }

  // DeleteRole 删除角色信息
  rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/role",
    };
  }

}